# nitay-and-ilan-project

./: CLI.cpp  CLI.h  CMakeLists.txt  CanDistance.cpp  CanDistance.h  CheDistance.cpp  CheDistance.h  Command.h  DefultIO.h  Distance.h  DistancesFunc.cpp  DistancesFunc.h  EucDistance.cpp  EucDistance.h  HoldInfo.cpp  HoldInfo.h  KNN.cpp  KNN.h  ManDistance.cpp  ManDistance.h  MinDistance.cpp  MinDistance.h  README.md  SocketIO.cpp  SocketIO.h  client.cpp  client.out  func1.cpp  func1.h  func2.cpp  func2.h  func3.cpp  func3.h  func30.h  func4.cpp  func4.h  func5.cpp  func5.h  func8.cpp  func8.h  (+3 more)
datasets/beans/: filetosavecode
